XP Framework ChangeLog
========================================================================
$Id$

Version ?.?.?, released ????-??-??
----------------------------------
SVN version: ?????

Heads up!
~~~~~~~~~

RFCs
~~~~

Bugfixes
~~~~~~~~
- Fix LDAPClient::read() method
  (kiesel)
- Ports: Fixed Nagios Heartbeat adding two dots between unqualified host
  name and domain (e.g. example..1and1.com where example is the host name)
  (hinckel, doebele)

Features
~~~~~~~~

Version 5.6.2, released 2007-11-21
----------------------------------
SVN version: 11353

Heads up!
~~~~~~~~~
- Removed deprecated xml.XSLProcessor class
  (friebe)
- Changed img.util.IptcData::setDateCreated() to accept and 
  img.util.IptcData::getDateCreated() to return util.Date instances
  (friebe)
- The directories "experiments", "ports/dist" and several project-
  specific classes from ports/classes have been moved to the XPForge
  repository - http://xp-framework.info/xml/xp.en_US/news/view?217
  (friebe)

RFCs
~~~~
- Implemented RFC #0143: Image metadata API enhancements
  (friebe)
- Implemented RFC #0139: XPForge SVN
  (friebe, kiesel)
- Implemented RFC #0141: FTP Transfer listening
  (friebe)
- Implemented RFC #0142: I/O Streams to PHP streams wrapper
  (friebe)
- Implemented RFC #0140: FTP API enhancements
  (friebe)
- Implemented RFC #0138: Additional interceptor callbacks in 
  peer.ftp.server
  (gellweiler)

Bugfixes
~~~~~~~~
- Fixed peer.mail.Message which set the Date of the message via
  Date::now()->toString(). Since the default behaviour of toString
  was changed with the new date object this led to a non rfc-conform
  date in the mail header.
  (hinckel, doebele)
- Work around PHP bug #43206 by using date_time_set / date_date_set
  in util.DateUtil instead of Date::getTimeZone().
  (clang)
- Fix XPSoapMessage::_recurseData() to return array keys without ":" in
  case a namespace is included in node name
  (hinckel)
- Fixed xp::sapi() when using XAR-releases on Windows
  (friebe)