@@ -14,6 +14,9 @@ RFCs
 
 Bugfixes
 ~~~~~~~~
+- Fix DomXSLProcessor::determineOutputEncoding() to return the output
+  encoding declared in imported XSL files using <xsl:import/>
+  (friebe, hinckel)
 - Fix LDAPClient::read() method
   (kiesel)
 - Ports: Fixed Nagios Heartbeat adding two dots between unqualified host
